# The-McEliece-Cryptosystem

./: .gitignore  Makefile  README.md  decrypt.c  encrypt.c  init.c  key_gen.c  matrix.c  mceliece.h  qc_mdpc.c  qc_mdpc.h  test.c  utility.c  utility.h
C_implementation/: Makefile  README.md  mceliece.c
Varad0612-C-Implementation/: matrix.h
docs/: README.md
src/: CMakeLists.txt
src/hamc/: RREFMatrix.cu  main.cu  sources.cmake
src/tests/: sources.cmake
src/tests/RREFMatrix/: RREF_cpu.c  RREF_cpu.h  dataset_generator.cpp  main.cu  sources.cmake
